# flydigi-vader5

./: CMakeLists.txt
config/: test-gamepad-remap.toml  test-remap.toml
include/vader5/: config.hpp  gamepad.hpp  hidraw.hpp  types.hpp  uinput.hpp
install/: 99-vader5-systemd.rules  99-vader5.rules  install.sh  vader5d@.service
openspec/changes/extend-fkey-range/: proposal.md  tasks.md
openspec/changes/extend-fkey-range/specs/remap-system/: spec.md
src/: config.cpp  gamepad.cpp  hidraw.cpp  keycodes.cpp  uinput.cpp
src/daemon/: main.cpp
src/tools/: test_remap.cpp
